--- a/frontend-main/src/components/ProcessingLog/ProcessingLog.css
+++ b/frontend-main/src/components/ProcessingLog/ProcessingLog.css
@@ -54,8 +54,6 @@
 
 .progress-bar {
   position: absolute;
-  left: 0;
-  top: 0;
   height: 100%;
   background-color: #4CAF50;
   border-radius: 10px;
@@ -64,13 +62,15 @@
 
 .progress-text {
   position: absolute;
-  left: 50%;
+  left: 0;
+  right: 0;
   top: 50%;
-  transform: translate(-50%, -50%);
+  transform: translateY(-50%);
   color: #fff;
   font-size: 14px;
   z-index: 1;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+  text-align: center;
+  width: 100%;
 }
 
 .download-button {
