--- a/frontend-main/src/components/UploadTable/UploadTable.css
+++ b/frontend-main/src/components/UploadTable/UploadTable.css
@@ -109,19 +109,19 @@
   color: var(--light-text);
 }
 
-.progress-bar-container {
+.upload-container .progress-bar-container {
   width: 100%;
-  height: 4px;
+  height: 16px !important;
   background-color: var(--surface-dark);
-  border-radius: 2px;
+  border-radius: 8px;
   margin-top: 10px;
   position: relative;
 }
 
-.progress-bar {
-  height: 100%;
+.upload-container .progress-bar {
+  height: 100% !important;
   background-color: var(--primary-color);
-  border-radius: 2px;
+  border-radius: 8px;
   transition: width 0.3s ease;
 }
 
